# ECE459-Vehicle-Project

./: .gitignore  README.md  setup_dirs.py
cv_model/: .gitignore  README.md  requirements.txt  test_model.py  train.py
cv_model/data/: tiny_lisa.yaml
cv_model/data/converted/: image_list.txt  test.txt  train.txt  trainval.txt  val.txt
cv_model/models/: yolov8n.yaml
cv_model/training/: split_dataset.py
cv_model/utils/: convert_annotations.py  create_splits.py  csv_to_voc.py
esp_control/: CMakeLists.txt
esp_control/main/: CMakeLists.txt  SimplePID.cpp  idf_component.yml  main.c  main.cpp  mpu6050_DMP.cpp  mpu6050_Kalman.cpp  mpu9250_Kalman.cpp  mpu9250_MadgwickAHRS.cpp  mpu9250_calibrate.cpp
esp_control/main/include/: SimplePID.h  angle.h
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
ros_comm/: README.md  cv_control.py  esp_forwarder.py  laptop_control.py  logs_consolidator.py  package.xml  setup.cfg  setup.py  user_control.py
ros_comm/config/: robot_params.yaml
ros_comm/esp/: README.md  motor_control.ino
ros_comm/launch/: robot_system.launch.py
ros_comm/ros_comm/computer_vision/: basic_cv_detection.py  convert_model.py  cv_control.py  dummy_cv_model.py  object_detection_node.py  test_yolo.py  test_yolo_local.py  yolo_detection.py  yolo_detection_optimized.py
ros_comm/ros_comm/control/: laptop_control.py  robot_controller.py  user_control.py
ros_comm/ros_comm/esp/: esp_forwarder2.py
ros_comm/ros_comm/perception/: perception_model.py
ros_comm/src/computer_vision/: dummy_cv_model.py
(+1370 files in other folders)
